--- a/GrabCutIOS/Base.lproj/Main.storyboard
+++ b/GrabCutIOS/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--View Controller-->
         <scene sceneID="pZl-pb-BPL">
             <objects>
-                <viewController id="XuG-5N-lE3" customClass="ViewController" customModule="Vision_ML_Example" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XuG-5N-lE3" customClass="ViewController" customModule="GrabCutIOS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="03i-JN-3zf"/>
                         <viewControllerLayoutGuide type="bottom" id="0xr-0r-n2w"/>
@@ -72,7 +72,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QEL-G3-XJK" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="71" y="137"/>
+            <point key="canvasLocation" x="69.599999999999994" y="136.28185907046478"/>
         </scene>
     </scenes>
 </document>
